[package]
name = "tack"
version = "0.0.0"
authors = ["Kyle Chen"]
edition = "2021"
description = "A little thumbnail maker"
readme = "README.md"
repository = "https://github.com/astral4/tack"
license = "MIT"

[dependencies]
anyhow = "1.0.82"

[lints.rust]
future_incompatible = "warn"
unused = "warn"
let_underscore_drop = "deny"
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
missing_abi = "deny"
missing_debug_implementations = "deny"
non_ascii_idents = "deny"
nonstandard_style = "deny"
noop_method_call = "deny"
rust_2018_idioms = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unreachable_pub = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"
unused_results = "deny"

[lints.clippy]
pedantic = "warn"
module_name_repetitions = "allow"

[profile.release]
codegen-units = 1
lto = true
strip = true
